force-app/main/default/objects/AI_Feedback__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partial Response</fullName>
            </value>
            <value>
                <fullName>Made-up Response</fullName>
            </value>
            <value>
                <fullName>Irrelevant Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>