force-app/main/default/objects/AI_Feedback__c/fields/Security_Audit__c.field-meta.xml
<CustomField>
    <fullName>Security_Audit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Security Audit</label>
    <referenceTo>AI_Response__c</referenceTo>
    <relationshipLabel>Feedbacks</relationshipLabel>
    <relationshipName>Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>